tests/gen-test/test_out/cast-mismatch.txt
error: cast size mismatch
 --> cast-mismatch\root.ctl:3:19
  |
3 | fn main -> u32 => cast(0)
  |                   ^^^^^^^ happened here
  |
  = info: cast from uint(8) to u32(4), size does not match

error: cast between generic types is not allowed
 --> cast-mismatch\root.ctl:4:37
  |
4 | fn [F, T] my_cast(value: F) -> T => cast(value)
  |                                     ^^^^^^^^^^^ happened here
  |
  = info: cast from param0 to param1, which contain generic parameters that depend on function instance

